Optimize imports, fixed some warnings, cleaned up code